导航动画（已修改）

--- a/50projects/animated-navigation/index.html
+++ b/50projects/animated-navigation/index.html
@@ -10,18 +10,20 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
-<div class="top"></div>
-<div class="container close">
-    <span class="tag">Home</span>
-    <span class="tag">Works</span>
-    <span class="tag">About</span>
-    <span class="tag">Contact</span>
-    <i class="iconfont icon-cuowu"></i>
-</div>
-<div class="bottom"></div>
 
 <body>
-
+    <nav class="active" id="nav">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Works</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <button class="icon" id="toggle">
+            <div class="line line1"></div>
+            <div class="line line2"></div>
+        </button>
+    </nav>
 </body>
 
 </html>
